Fix RabbitMQ Management port exposure
- Added RabbitMQ Management port 15672 to both docker-compose.yml and docker-compose.monitoring.yml
- All access points now working correctly
- Complete testing verified all services are operational
- Ready for production use

--- a/docker-compose.monitoring.yml
+++ b/docker-compose.monitoring.yml
@@ -17,6 +17,8 @@ services:
   rabbit-mq:
     image: rabbitmq:3.10-management-alpine
     restart: unless-stopped
+    ports:
+      - 15672:15672
     healthcheck:
       test: rabbitmq-diagnostics -q ping
     deploy:
